--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenvy = "0.15.6"
+frankenstein = { version = "0.21.0", features = ["async-http-client"] }
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
+
